fix turbo stream not showing up

--- a/app/assets/stylesheets/post_index.css
+++ b/app/assets/stylesheets/post_index.css
@@ -53,7 +53,7 @@
   flex-direction: column;
 }
 
-.post-display {
+#post-display {
   display: flex;
   flex-direction: column;
   gap: 1rem;
